[package]
name = "charon"
version = "0.0.1"
authors = [
  "Tomas Korcak <korczis@gmail.com>"
]
description = "Ferryman who carries other people connections to other side. Operation Area? Wi-Fi!"
license = "MIT"
repository = "https://github.com/korczis/charon"

[dependencies]
chomp = "0.2.5"
chrono = "0.2"
clap = "*"
cookie = "0.2.4"
ctrlc = "*"
env_logger = "0.3"
libc = { version = "0.2", default-features = false }
log = "0.3"
lru-cache = "0.0.7"
pcap = { git = "https://github.com/korczis/pcap.git" }
rand = "0.3.0"
regex = "0.1"
tempfile = "2.1.4"
time = "0.1.35"
users = "0.5.0"

[lib]
name = "charon"
path = "src/lib.rs"

[[bin]]
name = "charon"
path = "src/main.rs"
doc = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
# -Z time-passes

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true
# panic = "abort"
